--- a/capstone.yml
+++ b/capstone.yml
@@ -1,7 +1,7 @@
 name: fortune
 title: Fortune
 is_published: true
-short_description: Implement the famous *forture* command of Unix in Python.
+short_description: Implement the famous <em>fortune</em> command of Unix in Python.
 description: |
   Implement a simple version of popular Unix program [fortune][1] in Python.
 
@@ -20,4 +20,8 @@ tasks:
       ```
       git clone {git_url}
       ```
-    checks: []
+    checks:
+      - name: check_command
+        title: Check fortune.py is present and working
+        args:
+          command: python fortune.py
